Revert "Stable fix cosine (#108)" (#110)
This reverts commit ab7d8a9f5a3e09c4b677ae2894d2ee8281f08a1e.