@@ -29,7 +29,6 @@ import java.io.Serializable;
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
@@ -127,7 +126,7 @@ class CosineDistanceFunction implements DistanceFunction, Serializable {
 
     @Override
     public double apply(double[] a, double[] b) throws HyracksDataException {
-        return VectorDistanceArrCalculation.cosineDistance(a, b);
+        return VectorDistanceArrCalculation.cosine(a, b);
     }
 }
 
@@ -600,25 +599,15 @@ public final class HierarchicalKMeansPlusPlusCentroidsOperatorDescriptor extends
             UTF8StringPointable.generateUTF8Pointable("manhattan distance");
     private static final UTF8StringPointable COSINE_FORMAT =
             UTF8StringPointable.generateUTF8Pointable("cosine similarity");
-    private static final UTF8StringPointable COSINE_ALIAS = UTF8StringPointable.generateUTF8Pointable("cosine");
     private static final UTF8StringPointable DOT_PRODUCT_FORMAT = UTF8StringPointable.generateUTF8Pointable("dot");
 
-    // Distance function hash map (includes "cosine" alias for DDL-normalized metric)
-    private static final Map<Integer, DistanceFunction> DISTANCE_MAP = buildDistanceMap();
-
-    private static Map<Integer, DistanceFunction> buildDistanceMap() {
-        DistanceFunction cosineFunc = new CosineDistanceFunction();
-        Map<Integer, DistanceFunction> m = new HashMap<>();
-        m.put(MANHATTAN_FORMAT.hash(), new ManhattanDistanceFunction());
-        m.put(EUCLIDEAN_DISTANCE.hash(), new EuclideanDistanceFunction());
-        m.put(EUCLIDEAN_DISTANCE_L2.hash(), new EuclideanDistanceFunction());
-        m.put(EUCLIDEAN_DISTANCE_SQUARED.hash(), new EuclideanSquaredDistanceFunction());
-        m.put(EUCLIDEAN_DISTANCE_L2_SQUARED.hash(), new EuclideanSquaredDistanceFunction());
-        m.put(COSINE_FORMAT.hash(), cosineFunc);
-        m.put(COSINE_ALIAS.hash(), cosineFunc);
-        m.put(DOT_PRODUCT_FORMAT.hash(), new DotProductDistanceFunction());
-        return Collections.unmodifiableMap(m);
-    }
+    // Distance function hash map
+    private static final Map<Integer, DistanceFunction> DISTANCE_MAP =
+            Map.of(MANHATTAN_FORMAT.hash(), new ManhattanDistanceFunction(), EUCLIDEAN_DISTANCE.hash(),
+                    new EuclideanDistanceFunction(), EUCLIDEAN_DISTANCE_L2.hash(), new EuclideanDistanceFunction(),
+                    EUCLIDEAN_DISTANCE_SQUARED.hash(), new EuclideanSquaredDistanceFunction(),
+                    EUCLIDEAN_DISTANCE_L2_SQUARED.hash(), new EuclideanSquaredDistanceFunction(), COSINE_FORMAT.hash(),
+                    new CosineDistanceFunction(), DOT_PRODUCT_FORMAT.hash(), new DotProductDistanceFunction());
 
     // Clipping constants for centroid values
     private static final double DEFAULT_CLIP_MIN = -1e3;
@@ -639,16 +628,11 @@ public final class HierarchicalKMeansPlusPlusCentroidsOperatorDescriptor extends
     private int[][] partitionsMap; // Maps compute partition to storage partition(s)
 
     private static DistanceFunction getDistanceFunction(String distanceType) {
-        if (distanceType == null || distanceType.trim().isEmpty()) {
-            return new EuclideanSquaredDistanceFunction();
-        }
-        String normalized = distanceType.toLowerCase().trim();
-        UTF8StringPointable formatPointable = UTF8StringPointable.generateUTF8Pointable(normalized);
+        UTF8StringPointable formatPointable = UTF8StringPointable.generateUTF8Pointable(distanceType.toLowerCase());
         DistanceFunction func = DISTANCE_MAP
                 .get(UTF8StringUtil.lowerCaseHash(formatPointable.getByteArray(), formatPointable.getStartOffset()));
         if (func == null) {
-            // Default to euclidean squared for unknown metrics (consistent with VCTreeBulkLoaderAndGroupingOperatorDescriptor)
-            return new EuclideanSquaredDistanceFunction();
+            throw new IllegalArgumentException("Unsupported distance function: " + distanceType);
         }
         return func;
     }
@@ -704,26 +688,6 @@ public final class HierarchicalKMeansPlusPlusCentroidsOperatorDescriptor extends
         }
 
         return clipped;
-    }
-
-    /**
-     * Whether the current distance function requires centroids to be L2-normalized after each
-     * Lloyd update (e.g. cosine similarity, dot product on unit vectors). Aligns with FAISS
-     * spherical k-means and Spark's CosineDistanceMeasure.
-     */
-    private boolean requiresNormalizedCentroids() {
-        return distanceFunction instanceof CosineDistanceFunction
-                || distanceFunction instanceof DotProductDistanceFunction;
-    }
-
-    /**
-     * Normalizes centroid in place to unit L2 norm when using cosine similarity or dot product,
-     * so that centroid semantics match FAISS/Spark (spherical k-means). No-op for other metrics.
-     */
-    private void maybeNormalizeCentroid(double[] centroid) {
-        if (centroid != null && requiresNormalizedCentroids()) {
-            VectorDistanceArrCalculation.normalizeL2(centroid);
-        }
     }
 
     /**
@@ -842,7 +806,7 @@ public final class HierarchicalKMeansPlusPlusCentroidsOperatorDescriptor extends
     public HierarchicalKMeansPlusPlusCentroidsOperatorDescriptor(IOperatorDescriptorRegistry spec,
             RecordDescriptor outputRecDesc, RecordDescriptor secondaryRecDesc, UUID sampleUUID, UUID tupleCountUUID,
             UUID materializedDataUUID, UUID scalarValuesUUID, IScalarEvaluatorFactory args, int K,
-            int maxScalableKmeansIter, IIndexDataflowHelperFactory indexHelperFactory, int[][] partitionsMap,String distanceMetric) {
+            int maxScalableKmeansIter, IIndexDataflowHelperFactory indexHelperFactory, int[][] partitionsMap) {
         super(spec, 1, 1);
         // Output record descriptor defines the format of output tuples (treeLevel, centroidId, parentClusterId, embedding)
         // Input record descriptor is the 2-field format with vector embeddings
@@ -858,8 +822,8 @@ public final class HierarchicalKMeansPlusPlusCentroidsOperatorDescriptor extends
         this.indexHelperFactory = indexHelperFactory;
         this.partitionsMap = partitionsMap;
 
-        // Distance function from index DDL (WITH similarity "euclidean"|"cosine"|"cosine similarity"|etc.); default euclidean squared
-        this.distanceFunction = getDistanceFunction(distanceMetric);
+        // Initialize distance function to euclidean squared to avoid null pointer issues
+        this.distanceFunction = new EuclideanSquaredDistanceFunction();
     }
 
     @Override
@@ -1576,7 +1540,6 @@ public final class HierarchicalKMeansPlusPlusCentroidsOperatorDescriptor extends
                                 if (dist > 1e-4) {
                                     converged = false;
                                 }
-                                maybeNormalizeCentroid(newCentroids[i]);
                                 centroids.set(i, newCentroids[i]);
                             }
                         }
@@ -1656,11 +1619,11 @@ public final class HierarchicalKMeansPlusPlusCentroidsOperatorDescriptor extends
                             }
                             // Weighted distance: weight[j] * D(c_j)
                             weightedDistances[j] = weights[j] * minDist;
-                            totalWeighte\dDistance += weightedDistances[j];
+                            totalWeightedDistance += weightedDistances[j];
                         }
 
                         if (totalWeightedDistance <= 0) {
-                            b//ak;
+                            break;
                         }
 
                         // Weighted random selection
@@ -1726,7 +1689,6 @@ public final class HierarchicalKMeansPlusPlusCentroidsOperatorDescriptor extends
                                 if (dist > 1e-4) {
                                     converged = false;
                                 }
-                                maybeNormalizeCentroid(newCentroids[i]);
                                 resultCentroids.set(i, newCentroids[i]);
                             }
                         }
@@ -2125,17 +2087,14 @@ public final class HierarchicalKMeansPlusPlusCentroidsOperatorDescriptor extends
                                 if (dist > 1e-4) {
                                     converged = false;
                                 }
-                                maybeNormalizeCentroid(newCentroids[i]);
                                 resultCentroids.set(i, newCentroids[i]);
                             } else {
                                 // Reinitialize empty cluster
                                 // Select random centroid from input centroids list
                                 if (!centroids.isEmpty()) {
                                     int randomIdx = rand.nextInt(centroids.size());
-                                    double[] reinit =
-                                            Arrays.copyOf(centroids.get(randomIdx), centroids.get(randomIdx).length);
-                                    maybeNormalizeCentroid(reinit);
-                                    resultCentroids.set(i, reinit);
+                                    resultCentroids.set(i,
+                                            Arrays.copyOf(centroids.get(randomIdx), centroids.get(randomIdx).length));
                                     //                                    System.err.println(
                                     //                                            "Reinitialized empty cluster " + i + " with random centroid from input");
                                     converged = false; // Force continuation since we changed a centroid
